2006-05-09  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-spvr.scm, src/kahua-keyserv.scm:
	  Set backlog of server-socket to the maximum value.

2006-04-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua-server.scm, src/kahua-spvr.scm, src/kahua/server.scm, test/server.scm:
	Supported :worker-uri keyword for `app-servers' file.
	Changed kahua-bridge-name defalut value to "/kahua.cgi".
	(SCRIPT_PATH must absolute path)

2006-04-07  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* cgi/kahua.cgi.in (cgi-error-proc): add status "503 Service Temporary Unavailable" to cgi-header. 

2006-04-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* cgi/Makefile.in, cgi/fix-shebang.sh,
	  cgi/kahua.cgi.in, src/kahua/config.scm.in:
	  Fix some mistake of substitution rules.
	  Especially use ##KAHUA_STATICDIR## instead of ##KAHUA_WWW_DIR##.

2006-04-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-spvr.scm:
	  Fixed some bugs and cleaned some code up.

	* src/kahua-spvr.scm:
	  Now the signal mask of "root" thread is restored periodically,
	  in order to avoid that the sigmask is changed unexpectedly on
	  Mac OS X 10.4.  This is a temporary step.

	* src/kahua-server.scm:
	  Set :backlog at SOMAXCONN.  Sorry that this change depends on
	  Gauche 0.8.7.

	* src/Makefile.in: Fix a lack of KAHUA_STATICDIR substitution.

2006-04-01  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Added kahua-call-with-current-context.

2006-03-18  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/xml.scm: Added `!exclude' pattern directive.

2006-03-16  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/elem.scm: Added node-set/ tag.

2006-03-13  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Fixed regist-entry-method side-effect bug.

2006-03-11  SHIBATA Tomohisa  <shibata@kahua.org>

	* ChangeLog, src/kahua/user.scm:
	Changed kahua-add-user to get optional args.

2006-03-11  SHIBATA Tomohisa  <shibata@kahua.org>
